--- a/administrate/app/assets/stylesheets/administrate/components/_header.scss
+++ b/administrate/app/assets/stylesheets/administrate/components/_header.scss
@@ -1,8 +1,10 @@
 .header {
+  background-color: $hover-link-color;
+  color: $grey-0;
   @include display(flex);
   @include justify-content(space-between);
   @include align-items(flex-end);
-  padding: $base-spacing 0;
+  padding: $base-spacing;
 
   &-heading {
     margin-top: 0;
