--- a/administrate/app/assets/stylesheets/administrate/base/_variables.scss
+++ b/administrate/app/assets/stylesheets/administrate/base/_variables.scss
@@ -44,7 +44,7 @@ $light-green: #4ab471;
 $form-field-background-color: #fff;
 $white: #fff;
 $grey-0: #f6f7f7;
-$grey-1: #dfe0e1;
+$grey-1: #EAEDF0;
 $grey-2: #cfd8dc;
 $grey-3: #90acad;
 $grey-4: #7b808c;
@@ -53,7 +53,7 @@ $grey-6: #344346;
 $grey-7: #293f54;
 
 // Background Color
-$base-background-color: $dark-blue;
+$base-background-color: $grey-1;
 
 // Font Colors
 $base-font-color: $grey-7;
