--- a/administrate/app/assets/stylesheets/administrate/components/_header.scss
+++ b/administrate/app/assets/stylesheets/administrate/components/_header.scss
@@ -1,10 +1,15 @@
 .header {
-  background-color: $hover-link-color;
+  background-color: $base-link-color;
   color: $grey-0;
   @include display(flex);
   @include justify-content(space-between);
   @include align-items(flex-end);
   padding: $base-spacing;
+
+  .button {
+    border: $base-border;
+    border-color: $grey-0;
+  }
 
   &-heading {
     margin-top: 0;
