WIP getting nowhere with selectize & ajax

--- a/administrate/app/views/fields/has_many/_form.html.erb
+++ b/administrate/app/views/fields/has_many/_form.html.erb
@@ -1,11 +1,4 @@
 <%= f.label field.attribute_key %>
 
-<%= f.collection_select(
-  field.attribute_key,
-  field.candidate_records,
-  :id,
-  :to_s,
-  {},
-  { multiple: true },
-)
-%>
+<%= f.select(field.attribute_key, { multiple: true }) do %>
+<% end %>
